simple visualization done

--- a/connect_postgresql.ipynb
+++ b/connect_postgresql.ipynb
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7eff119e4e90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7eff11481250>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
