interest income added

--- a/Simple_visualiazations.ipynb
+++ b/Simple_visualiazations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd426279a50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7faf9bf4f690>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -128,7 +128,7 @@
        "loan_amount     4548500.0  22495500.0  10891000.0"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -172,16 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd41fcaa690>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7faf9aee4bd0>"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -224,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd41d81f150>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7faf9ae206d0>"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
