fourth visualization done

--- a/connect_postgresql.ipynb
+++ b/connect_postgresql.ipynb
@@ -184,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe441546610>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe440ea64d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
