--- a/Simple_visualiazations.ipynb
+++ b/Simple_visualiazations.ipynb
@@ -544,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### cumilative sale"
+    "### Cumilative Sale"
    ]
   },
   {
@@ -594,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Number of employees and sale"
+    "### Sale/employee ration in provinces"
    ]
   },
   {
