fix for wrong query

--- a/query visualization.ipynb
+++ b/query visualization.ipynb
@@ -28,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcfce4744d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb3484f610>"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -80,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcfce559950>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb34ac9410>"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -139,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcfd5cb4390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb34aae490>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcfd54b0f10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb349d0250>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -247,16 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcfcdacd550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcb349d62d0>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -335,30 +335,36 @@
     " \n",
     "conn = getConnection()\n",
     "\n",
-    "sql = \"\"\"select month_end_Date, status, sum(c)/ sum(c) over (partition by month_end_Date) prop \n",
-    "from ( \n",
-    "    select month_end_Date,  count(*) c, \n",
-    "    (case when npl.min_date_npl is null then 'BONIS' \n",
-    "     when (month_end.date_key -npl.min_date_npl) > 365 then 'DEFAULT' \n",
-    "     when (month_end.date_key -npl.min_date_npl) > 180 then 'UTP' \n",
-    "     when (month_end.date_key -npl.min_date_npl) > 90 then 'PASTDUE' else 'BONIS' end) status \n",
-    "    from sale s left outer join npl on   s.customer_key = npl.sale_customer_key, \n",
-    "    (select max(date_key) as date_key, max(date) as month_end_Date \n",
-    "    from \"date\" \n",
-    "    group by year, month  \n",
-    "    HAVING max(date) < current_date \n",
-    "    order by year, month ) month_end \n",
-    "    WHERE s.sale_date_key < month_end.date_key \n",
-    "    group by month_end_date, status \n",
-    "    order by month_end_date, status ) df \n",
-    "group by month_end_date, status, c \n",
-    "order by month_end_date, status\"\"\"\n",
+    "sql = \"\"\"\n",
+    "WITH  states AS (select month_end_Date,  count(*) as num,\n",
+    "(case when npl.min_date_npl is null then 'BONIS'\n",
+    " when (month_end.date_key -npl.min_date_npl) > 365 then 'DEFAULT'\n",
+    " when (month_end.date_key -npl.min_date_npl) > 180 then 'UTP' \n",
+    "  when (month_end.date_key -npl.min_date_npl) > 90 then 'PASTDUE' else 'BONIS' end) status\n",
+    "from sale s left outer join npl on   s.customer_key = npl.sale_customer_key,\n",
+    "(select max(date_key) as date_key, max(date) as month_end_Date \n",
+    "from \"date\"\n",
+    "group by year, MONTH \n",
+    "HAVING max(date) < current_date\n",
+    "ORDER BY YEAR, MONTH ) month_end \n",
+    "WHERE s.sale_date_key < month_end.date_key\n",
+    "GROUP BY month_end_date, status\n",
+    "ORDER BY month_end_date, status )\n",
+    "SELECT s_all.month_end_date, COALESCE(s_BONIS.num,0) AS BONIS, COALESCE(s_PASTDUE.num,0) AS PASTDUE ,\n",
+    "COALESCE(s_UTP.num,0) as UTP, COALESCE(s_DEFAULT.num,0) as DEFAULT\n",
+    "FROM states s_all \n",
+    "LEFT OUTER JOIN states s_BONIS ON s_all.month_end_Date = s_BONIS.month_end_Date AND s_BONIS.status = 'BONIS'\n",
+    "LEFT OUTER JOIN states s_PASTDUE ON s_all.month_end_Date = s_PASTDUE.month_end_Date  AND s_PASTDUE.status = 'PASTDUE'\n",
+    "LEFT OUTER JOIN states s_UTP ON s_all.month_end_Date = s_UTP.month_end_Date  AND s_UTP.status = 'UTP'\n",
+    "LEFT OUTER JOIN states s_DEFAULT ON s_all.month_end_Date = s_DEFAULT.month_end_Date  AND s_DEFAULT.status = 'DEFAULT'\n",
+    "\"\"\"\n",
     "\n",
     "\n",
     "df = sqlio.read_sql_query(sql, conn)\n",
     "df = df.set_index('month_end_date')\n",
     "\n",
     "color=(0.2, 0.4, 0.6, 0.6)\n",
+    "normalizedDataFrame = df.divide(df.sum(axis=1), axis=0)\n",
     "\n",
     "conn.close()\n",
     "normalizedDataFrame.head()\n",
